# fast

./: .coveralls.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LanguageType.proto.in  LiteralType.proto.in  Makefile  Makefile.in  README.md  changelog  configure  configure.ac  control  deploy  fast.cc  fast.pb.cc  fast.pb.h  fast.proto.in  fast.rb  fast.sh  fast_generated.h  license.txt  osx  osxdeploy  rules  run  smali  srcml.rb  srcml_reader_handler.hpp.patch  travisdeploy
72a7a1db7fd764455436344e885a9feb6438e803/: slice.pb  slice.pb.txt  slice.pb.xml  slice.txt
Formula/: fast.rb
benchmarks/cloning/: run
benchmarks/diffing/: Grammar-v1.javaGrammar-v2.java-diff.fbs  Hello1.javaHello2.java-diff.fbs  git-dl-fast.txt  git-dl-gumtree.txt  openssl-fast.txt  openssl-gumtree.txt  run  sum.awk  t.tex
benchmarks/parsing/: add.awk  run
benchmarks/slicing/: run  size  timing.txt
cmake/: CMakeLists.txt
d84081c8399be29a89044e18c784eed17740a271/: slice.pb  slice.pb.txt  slice.pb.xml  slice.txt
debian/: README  changelog  deploy  srcSlice
doc/: CONTRIBUTING.md  architecture.md  contributors.md  example.md  installation.md  options.md  performance.md  usage.md
docker/: Dockerfile  b  r
el_capitan/: deploy
lib/: osx
lib/debian/: changelog  copyright  deploy  rules
lib/el_capitan/: deploy  libsrcsax.dylib  srcml  tutorial.md
lib/high_sierra/: deploy  libsrcml.dylib  srcml
lib/sierra/: deploy
osx/: deploy  deploy_el_capitan  deploy_sierra  libsrcml.dylib_el_capitan
rapidxml/: rapidxml.hpp  rapidxml_print.hpp
sierra/: deploy  srcSlice
src/: CMakeLists.txt  ElementType.proto.in  LiteralType.proto.in  Makefile.am  PB.java  Smali.java  SmaliType.proto.in  Unit.proto.in  author.proto.in  commit.proto.in  diff.proto.in  fast-fbs.cc  fast-json.py  fast-option.cc  fast-option.h  fast-pb.cc  fast-pickle.py  fast-srcml.cc  fast.cc  fast.pb.cc  fast.pb.h  fast.proto.in  fast.py  fast.sh  fast_generated.h  fast_pb2.py  git.cc  hunk.proto.in  log.proto.in  modline.proto.in  process.cc  slice-diff.cc  srcSliceHandler.hpp  srcsax.h  srcslice_output.cc  testLiteral.cc  version.h.in
src/core/: build.gradle  p
src/cpp/: output.cpp  srcSliceHandler.cpp
src/fast/: Fast.java
src/gen.pb/: p
src/intt-0.2.0/: Example.java  README - LICENCE.txt  java-projects.csv
src/schema/: LanguageType.proto.in  Literal.proto.in  Python3.proto.in  Smali.proto.in  Solidity.proto.in  author.proto.in  fast.proto.in
src/srcslice/: srcSAXController.hpp  srcSliceHandler.hpp  srcsax_handler.h
src/srcyuml/: SourceInformation.hpp  srcYUMLClass.hpp  srcYUMLHandler.hpp
test/: .gitignore  .lldbrc  1  CoordinatorLayout.smali  DuplicateVirtualMethods-diff.pb  DuplicateVirtualMethods-diff.txt  DuplicateVirtualMethods-v2.smali  DuplicateVirtualMethods.pb  DuplicateVirtualMethods.smali  DuplicateVirtualMethods.smali.pb  DuplicateVirtualMethods.smali.pb.txt  DuplicateVirtualMethods.smali.pb.xml  DuplicateVirtualMethods.smali_pb.txt  DuplicateVirtualMethods.txt  DuplicateVirtualMethods.xml  Hello-s.slice  Hello.1.error  Hello.2.error  Hello.error  Hello.fbs  Hello.java  Hello.pb  Hello.position.pb  Hello.position.xml  Hello.slice.pb  Hello.txt  Hello.xml  NavigationMenuPresenter$1.smali  RunnerArgs.smali  SparseArrayCompat.smali  Tomcat12.csv  a  a.csv  a.pb  a.txt  all.fbs  all.pb  all.xml  api.list  bug-xml  (+33 more)
test/a/: Example.java  example.cc  example2.cc
test/b/: example.cc
test/src/: index.html  (+32 more)
(+171 files in other folders)
